Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,14 +31,28 @@
         <hr>
 
         <section id="main_content">
-          <h1>
+          <p><a href="https://android-arsenal.com/details/1/3191"><img src="https://img.shields.io/badge/Android%20Arsenal-CreditCardView-green.svg?style=true" alt="Android Arsenal"></a></p>
+
+<h1>
 <a id="creditcardview" class="anchor" href="#creditcardview" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>CreditCardView</h1>
 
 <p>A real life simulation of a credit card for android.</p>
 
-<p>Watch:</p>
+<h3>
+<a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Screenshots:</h3>
 
-<p><a href="https://youtu.be/6BsWDvnu1qA" title="CreditCardView Android "><img src="http://img.youtube.com/vi/6BsWDvnu1qA/0.jpg" alt="WATCH"></a></p>
+<p>CreditCardView
+<img src="https://raw.githubusercontent.com/Movile/CreditCardView/master/screenshoots/screen1.png" alt="screenshot 1"></p>
+
+<p><br>
+<br>
+CreditCardFragment
+<img src="https://raw.githubusercontent.com/Movile/CreditCardView/master/screenshoots/screen2.png" alt="screenshot 2"></p>
+
+<h3>
+<a id="watch" class="anchor" href="#watch" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Watch:</h3>
+
+<p><a href="https://youtu.be/3w5psz9nhoI" title="CreditCardView Android "><img src="https://raw.githubusercontent.com/Movile/CreditCardView/master/screenshoots/player.png" alt="WATCH"></a></p>
 
 <p>You can use just the representation of credit card with CreditCardView, or you can use the entire solution to collect user's credit card data with CreditCardFragment.</p>
 
@@ -179,6 +193,16 @@ inputCardFragment<span class="pl-k">.</span>setListPurchaseOptions(getList(), <s
 
 <p>Code and documentation copyright 2016 Movile.
 Code released under the <a href="https://github.com/Movile/CreditCardView/blob/master/LICENSE.txt">MIT license</a>.</p>
+
+<p>Felipe Silvestre (Dev) &amp; Victor Namba (Designer)</p>
+
+<h3>
+<a id="design-credits" class="anchor" href="#design-credits" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Design Credits</h3>
+
+<ul>
+<li>Victor Namba - <a href="https://dribbble.com/victornamba">https://dribbble.com/victornamba</a>
+</li>
+</ul>
         </section>
 
         <footer>
